// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bot message and section is end 1`] = `
.c0.c0.c0 {
  width: 100%;
  position: relative;
  padding: 3px 10px 6px;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-flex-flow: column nowrap;
  -ms-flex-flow: column nowrap;
  flex-flow: column nowrap;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  padding-right: 10px;
}

.c1.c1.c1 {
  max-width: 50%;
  font-size: 16px;
  line-height: normal;
  background-color: white;
  color: black;
  border-radius: 20px;
  border-bottom-right-radius: 20px;
  border-bottom-left-radius: 0px;
  padding: 11px 18px 11px 18px;
  font-family: Helvetica;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  word-wrap: break-word;
  -webkit-animation: cKFngk ease 1s;
  animation: cKFngk ease 1s;
  -webkit-animation-iteration-count: 1;
  animation-iteration-count: 1;
  -webkit-transform-origin: 10% 10%;
  -ms-transform-origin: 10% 10%;
  transform-origin: 10% 10%;
  -webkit-animation-fill-mode: backwards;
  animation-fill-mode: backwards;
  -webkit-animation: cKFngk ease 1s;
  -webkit-animation-iteration-count: 1;
  -webkit-transform-origin: 10% 10%;
  -webkit-animation-fill-mode: backwards;
  -moz-animation: cKFngk ease 1s;
  -moz-animation-iteration-count: 1;
  -moz-transform-origin: 10% 10%;
  -moz-animation-fill-mode: backwards;
  -o-animation: cKFngk ease 1s;
  -o-animation-iteration-count: 1;
  -o-transform-origin: 10% 10%;
  -o-animation-fill-mode: backwards;
  -ms-animation: cKFngk ease 1s;
  -ms-animation-iteration-count: 1;
  -ms-transform-origin: 10% 10%;
  -ms-animation-fill-mode: backwards;
  opacity: 0;
  opacity: 19;
}

<div
  className="c0"
  style={
    Object {
      "justifyContent": undefined,
    }
  }
>
  <div
    className="c1"
  >
    Hello
  </div>
</div>
`;

exports[`bot message and section is middle 1`] = `
.c0.c0.c0 {
  width: 100%;
  position: relative;
  padding: 3px 10px;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-flex-flow: column nowrap;
  -ms-flex-flow: column nowrap;
  flex-flow: column nowrap;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  padding-right: 10px;
}

.c1.c1.c1 {
  max-width: 50%;
  font-size: 16px;
  line-height: normal;
  background-color: white;
  color: black;
  border-radius: 20px;
  border-bottom-right-radius: 20px;
  border-bottom-left-radius: 20px;
  padding: 11px 18px 11px 18px;
  font-family: Helvetica;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  word-wrap: break-word;
  -webkit-animation: cKFngk ease 1s;
  animation: cKFngk ease 1s;
  -webkit-animation-iteration-count: 1;
  animation-iteration-count: 1;
  -webkit-transform-origin: 10% 10%;
  -ms-transform-origin: 10% 10%;
  transform-origin: 10% 10%;
  -webkit-animation-fill-mode: backwards;
  animation-fill-mode: backwards;
  -webkit-animation: cKFngk ease 1s;
  -webkit-animation-iteration-count: 1;
  -webkit-transform-origin: 10% 10%;
  -webkit-animation-fill-mode: backwards;
  -moz-animation: cKFngk ease 1s;
  -moz-animation-iteration-count: 1;
  -moz-transform-origin: 10% 10%;
  -moz-animation-fill-mode: backwards;
  -o-animation: cKFngk ease 1s;
  -o-animation-iteration-count: 1;
  -o-transform-origin: 10% 10%;
  -o-animation-fill-mode: backwards;
  -ms-animation: cKFngk ease 1s;
  -ms-animation-iteration-count: 1;
  -ms-transform-origin: 10% 10%;
  -ms-animation-fill-mode: backwards;
  opacity: 0;
  opacity: 19;
}

<div
  className="c0"
  style={
    Object {
      "justifyContent": undefined,
    }
  }
>
  <div
    className="c1"
  >
    Hello
  </div>
</div>
`;

exports[`bot message and section is single 1`] = `
.c0.c0.c0 {
  width: 100%;
  position: relative;
  padding: 8px 10px 6px;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-flex-flow: column nowrap;
  -ms-flex-flow: column nowrap;
  flex-flow: column nowrap;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  padding-right: 10px;
}

.c1.c1.c1 {
  max-width: 50%;
  font-size: 16px;
  line-height: normal;
  background-color: white;
  color: black;
  border-radius: 20px;
  border-bottom-right-radius: 20px;
  border-bottom-left-radius: 0px;
  padding: 11px 18px 11px 18px;
  font-family: Helvetica;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  word-wrap: break-word;
  -webkit-animation: cKFngk ease 1s;
  animation: cKFngk ease 1s;
  -webkit-animation-iteration-count: 1;
  animation-iteration-count: 1;
  -webkit-transform-origin: 10% 10%;
  -ms-transform-origin: 10% 10%;
  transform-origin: 10% 10%;
  -webkit-animation-fill-mode: backwards;
  animation-fill-mode: backwards;
  -webkit-animation: cKFngk ease 1s;
  -webkit-animation-iteration-count: 1;
  -webkit-transform-origin: 10% 10%;
  -webkit-animation-fill-mode: backwards;
  -moz-animation: cKFngk ease 1s;
  -moz-animation-iteration-count: 1;
  -moz-transform-origin: 10% 10%;
  -moz-animation-fill-mode: backwards;
  -o-animation: cKFngk ease 1s;
  -o-animation-iteration-count: 1;
  -o-transform-origin: 10% 10%;
  -o-animation-fill-mode: backwards;
  -ms-animation: cKFngk ease 1s;
  -ms-animation-iteration-count: 1;
  -ms-transform-origin: 10% 10%;
  -ms-animation-fill-mode: backwards;
  opacity: 0;
  opacity: 19;
}

<div
  className="c0"
  style={
    Object {
      "justifyContent": undefined,
    }
  }
>
  <div
    className="c1"
  >
    Hello
  </div>
</div>
`;

exports[`bot message and section is start 1`] = `
.c0.c0.c0 {
  width: 100%;
  position: relative;
  padding: 8px 10px 3px;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-flex-flow: column nowrap;
  -ms-flex-flow: column nowrap;
  flex-flow: column nowrap;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  padding-right: 10px;
}

.c1.c1.c1 {
  max-width: 50%;
  font-size: 16px;
  line-height: normal;
  background-color: white;
  color: black;
  border-radius: 20px;
  border-bottom-right-radius: 20px;
  border-bottom-left-radius: 20px;
  padding: 11px 18px 11px 18px;
  font-family: Helvetica;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  word-wrap: break-word;
  -webkit-animation: cKFngk ease 1s;
  animation: cKFngk ease 1s;
  -webkit-animation-iteration-count: 1;
  animation-iteration-count: 1;
  -webkit-transform-origin: 10% 10%;
  -ms-transform-origin: 10% 10%;
  transform-origin: 10% 10%;
  -webkit-animation-fill-mode: backwards;
  animation-fill-mode: backwards;
  -webkit-animation: cKFngk ease 1s;
  -webkit-animation-iteration-count: 1;
  -webkit-transform-origin: 10% 10%;
  -webkit-animation-fill-mode: backwards;
  -moz-animation: cKFngk ease 1s;
  -moz-animation-iteration-count: 1;
  -moz-transform-origin: 10% 10%;
  -moz-animation-fill-mode: backwards;
  -o-animation: cKFngk ease 1s;
  -o-animation-iteration-count: 1;
  -o-transform-origin: 10% 10%;
  -o-animation-fill-mode: backwards;
  -ms-animation: cKFngk ease 1s;
  -ms-animation-iteration-count: 1;
  -ms-transform-origin: 10% 10%;
  -ms-animation-fill-mode: backwards;
  opacity: 0;
  opacity: 19;
}

<div
  className="c0"
  style={
    Object {
      "justifyContent": undefined,
    }
  }
>
  <div
    className="c1"
  >
    Hello
  </div>
</div>
`;

exports[`max-width percentage 1`] = `
.c0.c0.c0 {
  width: 100%;
  position: relative;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-flex-flow: column nowrap;
  -ms-flex-flow: column nowrap;
  flex-flow: column nowrap;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  padding-right: 10px;
}

.c1.c1.c1 {
  max-width: 50%;
  font-size: 16px;
  line-height: normal;
  background-color: white;
  color: black;
  border-radius: 20px;
  border-bottom-right-radius: 20px;
  border-bottom-left-radius: 20px;
  padding: 11px 18px 11px 18px;
  font-family: Helvetica;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: end;
  align-self: flex-end;
  word-wrap: break-word;
  -webkit-animation: cKFngk ease 1s;
  animation: cKFngk ease 1s;
  -webkit-animation-iteration-count: 1;
  animation-iteration-count: 1;
  -webkit-transform-origin: 10% 10%;
  -ms-transform-origin: 10% 10%;
  transform-origin: 10% 10%;
  -webkit-animation-fill-mode: backwards;
  animation-fill-mode: backwards;
  -webkit-animation: cKFngk ease 1s;
  -webkit-animation-iteration-count: 1;
  -webkit-transform-origin: 10% 10%;
  -webkit-animation-fill-mode: backwards;
  -moz-animation: cKFngk ease 1s;
  -moz-animation-iteration-count: 1;
  -moz-transform-origin: 10% 10%;
  -moz-animation-fill-mode: backwards;
  -o-animation: cKFngk ease 1s;
  -o-animation-iteration-count: 1;
  -o-transform-origin: 10% 10%;
  -o-animation-fill-mode: backwards;
  -ms-animation: cKFngk ease 1s;
  -ms-animation-iteration-count: 1;
  -ms-transform-origin: 10% 10%;
  -ms-animation-fill-mode: backwards;
  opacity: 0;
  opacity: 19;
}

<div
  className="c0"
  style={
    Object {
      "justifyContent": "flex-end",
    }
  }
>
  <div
    className="c1"
  >
    Hello
  </div>
</div>
`;

exports[`own message and section is end 1`] = `
.c0.c0.c0 {
  width: 100%;
  position: relative;
  padding: 3px 10px 6px;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-flex-flow: column nowrap;
  -ms-flex-flow: column nowrap;
  flex-flow: column nowrap;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  padding-right: 10px;
}

.c1.c1.c1 {
  max-width: 50%;
  font-size: 16px;
  line-height: normal;
  background-color: white;
  color: black;
  border-radius: 20px;
  border-bottom-right-radius: 0px;
  border-bottom-left-radius: 20px;
  padding: 11px 18px 11px 18px;
  font-family: Helvetica;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: end;
  align-self: flex-end;
  word-wrap: break-word;
  -webkit-animation: cKFngk ease 1s;
  animation: cKFngk ease 1s;
  -webkit-animation-iteration-count: 1;
  animation-iteration-count: 1;
  -webkit-transform-origin: 10% 10%;
  -ms-transform-origin: 10% 10%;
  transform-origin: 10% 10%;
  -webkit-animation-fill-mode: backwards;
  animation-fill-mode: backwards;
  -webkit-animation: cKFngk ease 1s;
  -webkit-animation-iteration-count: 1;
  -webkit-transform-origin: 10% 10%;
  -webkit-animation-fill-mode: backwards;
  -moz-animation: cKFngk ease 1s;
  -moz-animation-iteration-count: 1;
  -moz-transform-origin: 10% 10%;
  -moz-animation-fill-mode: backwards;
  -o-animation: cKFngk ease 1s;
  -o-animation-iteration-count: 1;
  -o-transform-origin: 10% 10%;
  -o-animation-fill-mode: backwards;
  -ms-animation: cKFngk ease 1s;
  -ms-animation-iteration-count: 1;
  -ms-transform-origin: 10% 10%;
  -ms-animation-fill-mode: backwards;
  opacity: 0;
  opacity: 19;
}

<div
  className="c0"
  style={
    Object {
      "justifyContent": "flex-end",
    }
  }
>
  <div
    className="c1"
  >
    Hello
  </div>
</div>
`;

exports[`own message and section is single 1`] = `
.c0.c0.c0 {
  width: 100%;
  position: relative;
  padding: 3px 10px 6px;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-flex-flow: column nowrap;
  -ms-flex-flow: column nowrap;
  flex-flow: column nowrap;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  padding-right: 10px;
}

.c1.c1.c1 {
  max-width: 50%;
  font-size: 16px;
  line-height: normal;
  background-color: white;
  color: black;
  border-radius: 20px;
  border-bottom-right-radius: 0px;
  border-bottom-left-radius: 20px;
  padding: 11px 18px 11px 18px;
  font-family: Helvetica;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: end;
  align-self: flex-end;
  word-wrap: break-word;
  -webkit-animation: cKFngk ease 1s;
  animation: cKFngk ease 1s;
  -webkit-animation-iteration-count: 1;
  animation-iteration-count: 1;
  -webkit-transform-origin: 10% 10%;
  -ms-transform-origin: 10% 10%;
  transform-origin: 10% 10%;
  -webkit-animation-fill-mode: backwards;
  animation-fill-mode: backwards;
  -webkit-animation: cKFngk ease 1s;
  -webkit-animation-iteration-count: 1;
  -webkit-transform-origin: 10% 10%;
  -webkit-animation-fill-mode: backwards;
  -moz-animation: cKFngk ease 1s;
  -moz-animation-iteration-count: 1;
  -moz-transform-origin: 10% 10%;
  -moz-animation-fill-mode: backwards;
  -o-animation: cKFngk ease 1s;
  -o-animation-iteration-count: 1;
  -o-transform-origin: 10% 10%;
  -o-animation-fill-mode: backwards;
  -ms-animation: cKFngk ease 1s;
  -ms-animation-iteration-count: 1;
  -ms-transform-origin: 10% 10%;
  -ms-animation-fill-mode: backwards;
  opacity: 0;
  opacity: 19;
}

<div
  className="c0"
  style={
    Object {
      "justifyContent": "flex-end",
    }
  }
>
  <div
    className="c1"
  >
    Hello
  </div>
</div>
`;

exports[`render bot text message is last 1`] = `
.c0.c0.c0 {
  width: 100%;
  position: relative;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-flex-flow: column nowrap;
  -ms-flex-flow: column nowrap;
  flex-flow: column nowrap;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  padding-right: 10px;
}

.c1.c1.c1 {
  max-width: 200px;
  font-size: 16px;
  line-height: normal;
  background-color: white;
  color: black;
  border-radius: 20px;
  border-bottom-right-radius: 20px;
  border-bottom-left-radius: 20px;
  padding: 11px 18px 11px 18px;
  font-family: Helvetica;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  word-wrap: break-word;
  -webkit-animation: cKFngk ease 1s;
  animation: cKFngk ease 1s;
  -webkit-animation-iteration-count: 1;
  animation-iteration-count: 1;
  -webkit-transform-origin: 10% 10%;
  -ms-transform-origin: 10% 10%;
  transform-origin: 10% 10%;
  -webkit-animation-fill-mode: backwards;
  animation-fill-mode: backwards;
  -webkit-animation: cKFngk ease 1s;
  -webkit-animation-iteration-count: 1;
  -webkit-transform-origin: 10% 10%;
  -webkit-animation-fill-mode: backwards;
  -moz-animation: cKFngk ease 1s;
  -moz-animation-iteration-count: 1;
  -moz-transform-origin: 10% 10%;
  -moz-animation-fill-mode: backwards;
  -o-animation: cKFngk ease 1s;
  -o-animation-iteration-count: 1;
  -o-transform-origin: 10% 10%;
  -o-animation-fill-mode: backwards;
  -ms-animation: cKFngk ease 1s;
  -ms-animation-iteration-count: 1;
  -ms-transform-origin: 10% 10%;
  -ms-animation-fill-mode: backwards;
  opacity: 0;
  opacity: 19;
}

<div
  className="c0"
  style={
    Object {
      "justifyContent": undefined,
    }
  }
>
  <div
    className="c1"
  >
    Hello
  </div>
</div>
`;

exports[`render bot text message is not last 1`] = `
.c0.c0.c0 {
  width: 100%;
  position: relative;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-flex-flow: column nowrap;
  -ms-flex-flow: column nowrap;
  flex-flow: column nowrap;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  padding-right: 10px;
}

.c1.c1.c1 {
  max-width: 200px;
  font-size: 16px;
  line-height: normal;
  background-color: white;
  color: black;
  border-radius: 20px;
  border-bottom-right-radius: 20px;
  border-bottom-left-radius: 20px;
  padding: 11px 18px 11px 18px;
  font-family: Helvetica;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  word-wrap: break-word;
  -webkit-animation: cKFngk ease 1s;
  animation: cKFngk ease 1s;
  -webkit-animation-iteration-count: 1;
  animation-iteration-count: 1;
  -webkit-transform-origin: 10% 10%;
  -ms-transform-origin: 10% 10%;
  transform-origin: 10% 10%;
  -webkit-animation-fill-mode: backwards;
  animation-fill-mode: backwards;
  -webkit-animation: cKFngk ease 1s;
  -webkit-animation-iteration-count: 1;
  -webkit-transform-origin: 10% 10%;
  -webkit-animation-fill-mode: backwards;
  -moz-animation: cKFngk ease 1s;
  -moz-animation-iteration-count: 1;
  -moz-transform-origin: 10% 10%;
  -moz-animation-fill-mode: backwards;
  -o-animation: cKFngk ease 1s;
  -o-animation-iteration-count: 1;
  -o-transform-origin: 10% 10%;
  -o-animation-fill-mode: backwards;
  -ms-animation: cKFngk ease 1s;
  -ms-animation-iteration-count: 1;
  -ms-transform-origin: 10% 10%;
  -ms-animation-fill-mode: backwards;
  opacity: 0;
  opacity: 19;
}

<div
  className="c0"
  style={
    Object {
      "justifyContent": undefined,
    }
  }
>
  <div
    className="c1"
  >
    Hello
  </div>
</div>
`;

exports[`render own text message is last 1`] = `
.c0.c0.c0 {
  width: 100%;
  position: relative;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-flex-flow: column nowrap;
  -ms-flex-flow: column nowrap;
  flex-flow: column nowrap;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  padding-right: 10px;
}

.c1.c1.c1 {
  max-width: 200px;
  font-size: 16px;
  line-height: normal;
  background-color: white;
  color: black;
  border-radius: 20px;
  border-bottom-right-radius: 20px;
  border-bottom-left-radius: 20px;
  padding: 11px 18px 11px 18px;
  font-family: Helvetica;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: end;
  align-self: flex-end;
  word-wrap: break-word;
  -webkit-animation: cKFngk ease 1s;
  animation: cKFngk ease 1s;
  -webkit-animation-iteration-count: 1;
  animation-iteration-count: 1;
  -webkit-transform-origin: 10% 10%;
  -ms-transform-origin: 10% 10%;
  transform-origin: 10% 10%;
  -webkit-animation-fill-mode: backwards;
  animation-fill-mode: backwards;
  -webkit-animation: cKFngk ease 1s;
  -webkit-animation-iteration-count: 1;
  -webkit-transform-origin: 10% 10%;
  -webkit-animation-fill-mode: backwards;
  -moz-animation: cKFngk ease 1s;
  -moz-animation-iteration-count: 1;
  -moz-transform-origin: 10% 10%;
  -moz-animation-fill-mode: backwards;
  -o-animation: cKFngk ease 1s;
  -o-animation-iteration-count: 1;
  -o-transform-origin: 10% 10%;
  -o-animation-fill-mode: backwards;
  -ms-animation: cKFngk ease 1s;
  -ms-animation-iteration-count: 1;
  -ms-transform-origin: 10% 10%;
  -ms-animation-fill-mode: backwards;
  opacity: 0;
  opacity: 19;
}

<div
  className="c0"
  style={
    Object {
      "justifyContent": "flex-end",
    }
  }
>
  <div
    className="c1"
  >
    Hello
  </div>
</div>
`;

exports[`render own text message is not last 1`] = `
.c0.c0.c0 {
  width: 100%;
  position: relative;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-flex-flow: column nowrap;
  -ms-flex-flow: column nowrap;
  flex-flow: column nowrap;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  padding-right: 10px;
}

.c1.c1.c1 {
  max-width: 200px;
  font-size: 16px;
  line-height: normal;
  background-color: white;
  color: black;
  border-radius: 20px;
  border-bottom-right-radius: 20px;
  border-bottom-left-radius: 20px;
  padding: 11px 18px 11px 18px;
  font-family: Helvetica;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: end;
  align-self: flex-end;
  word-wrap: break-word;
  -webkit-animation: cKFngk ease 1s;
  animation: cKFngk ease 1s;
  -webkit-animation-iteration-count: 1;
  animation-iteration-count: 1;
  -webkit-transform-origin: 10% 10%;
  -ms-transform-origin: 10% 10%;
  transform-origin: 10% 10%;
  -webkit-animation-fill-mode: backwards;
  animation-fill-mode: backwards;
  -webkit-animation: cKFngk ease 1s;
  -webkit-animation-iteration-count: 1;
  -webkit-transform-origin: 10% 10%;
  -webkit-animation-fill-mode: backwards;
  -moz-animation: cKFngk ease 1s;
  -moz-animation-iteration-count: 1;
  -moz-transform-origin: 10% 10%;
  -moz-animation-fill-mode: backwards;
  -o-animation: cKFngk ease 1s;
  -o-animation-iteration-count: 1;
  -o-transform-origin: 10% 10%;
  -o-animation-fill-mode: backwards;
  -ms-animation: cKFngk ease 1s;
  -ms-animation-iteration-count: 1;
  -ms-transform-origin: 10% 10%;
  -ms-animation-fill-mode: backwards;
  opacity: 0;
  opacity: 19;
}

<div
  className="c0"
  style={
    Object {
      "justifyContent": "flex-end",
    }
  }
>
  <div
    className="c1"
  >
    Hello
  </div>
</div>
`;
